--- a/FERAOUN/cause.html
+++ b/FERAOUN/cause.html
@@ -15,8 +15,8 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Accueil</a></li> 
-                    <li><a href="page1.html">Cause</a></li>
-                    <li><a href="page2.html">Resultat et Conclusion</a></li>
+                    <li><a href="cause.html">Cause</a></li>
+                    <li><a href="conclusion.html">Resultat et Conclusion</a></li>
                 </ul>
             </nav>
             <h1>Les causes de la flambée des prix</h1>
