--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="description" content="pourquoi le prix de la RAM explose en 2026, causes et conséquences sur le marché hardware.">
-        <meta name="Auteur" content="Feraoun Mohamed" />
+        <meta name="Auteur" content="Feraoun Mohamed et ANURAJAN Thenuxshan" />
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
         <meta name="Sujet" content="l'evolution du marche de la ram">
         <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/x-icon" />
@@ -16,6 +16,7 @@
                 <ul>
                     <li><a href="index.html">Accueil</a></li> 
                     <li><a href="cause.html">Cause</a></li>
+                    <li><a href="developpement.html">Developpement et remarques</a> </li>
                     <li><a href="conclusion.html">Resultat et Conclusion</a></li>
                 </ul>
             </nav>
@@ -50,7 +51,7 @@
         </main>
         <footer>
             <address>
-                <p>Réalisé par <strong>Feraoun Mohamed</strong></p>
+                <p>Réalisé par <strong>Feraoun Mohamed et ANURAJAN Thenuxshan</strong></p>
                 <p>L2 Informatique - CY Cergy Paris Université</p>
                 <p>Janvier 2026</p>
             </address>
