je met ma version avant la fusion

--- a/cause.html
+++ b/cause.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="index.html">Accueil</a></li> 
                     <li><a href="cause.html">Cause</a></li>
-                    <li><a href="developpement.html">Developpement et remarques</a> </li>
+                    <li><a href="developpement.html">Remarques et définitions</a> </li>
                     <li><a href="conclusion.html">Resultat et Conclusion</a></li>
                 </ul>
             </nav>
