--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a href="index.html">Accueil</a></li> 
                     <li><a href="cause.html">Cause</a></li>
-                    <li><a href="developpement.html">Developpement et remarques</a> </li>
+                    <li><a href="developpement.html">Remarques et définitions</a> </li>
                     <li><a href="conclusion.html">Resultat et Conclusion</a></li>
                 </ul>
             </nav>
@@ -28,7 +28,7 @@
                 <p>
                     Si vous avez prévu de monter un PC ou d'acheter un nouveau téléphone récemment, 
                     vous avez sûrement remarqué une flambée des tarifs. <strong>Depuis quelque temps, 
-                    les prix de la RAM et de la mémoire explosent.</strong> la carte memoire RAM est vitale
+                    les prix de la <a href="developpement.html#id-Ram">RAM</a> et de la mémoire explosent.</strong> la carte memoire RAM est vitale
                     pour tous vos appareils, il permet de stocker et de manipuler des données et des images.
                     sans elle rien ne marche et donc cette hausse impacte directement le prix des appareils .
                     et donc votre budget.
