j'ai mis un peu de css

--- a/cause.html
+++ b/cause.html
@@ -6,7 +6,7 @@
         <meta name="Auteur" content="Feraoun Mohamed" />
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
         <meta name="Sujet" content="l'evolution du marche de la ram">
-        <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/x-icon" />
+        <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/jpg" />
         <title>La raison de la hausse des prix </title>
     </head>
     <body>
@@ -19,9 +19,9 @@
                     <li><a href="conclusion.html">Resultat et Conclusion</a></li>
                 </ul>
             </nav>
-            <h1>Les causes de la flambée des prix</h1>
         </header>
         <main>
+            <h1>Les causes de la flambée des prix</h1>
             <section>
                 <p>
                     Contrairement à ce que l'on pourrait croire, la hausse des prix n'est pas due au 
