--- a/conclusion.html
+++ b/conclusion.html
@@ -6,7 +6,7 @@
         <meta name="Auteur" content="Feraoun Mohamed" />
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
         <meta name="Sujet" content="l'evolution du marche de la ram">
-        <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/x-icon" />
+        <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/jpg" />
         <title>Resultat de la penurie sur le marche et la conclusion </title>
     </head>
     <body>
@@ -19,9 +19,9 @@
                     <li><a href="conclusion.html">Resultat et Conclusion</a></li>
                 </ul>
             </nav>
-            <h1>Bilan et Perspectives</h1>
         </header>
         <main>
+            <h1>Bilan et Perspectives</h1>
             <section>
                 <h2>Le Résultat : Un marché sacrifié</h2>
                 <p>
