--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="description" content="pourquoi le prix de la RAM explose en 2026, causes et conséquences sur le marché hardware.">
-        <meta name="Auteur" content="Feraoun Mohamed" />
+        <meta name="Auteur" content="Feraoun Mohamed"  police)./>
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
         <meta name="Sujet" content="l'evolution du marche de la ram">
-        <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/x-icon" />
+        <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/jpg" />
+        <link rel="stylesheet" href="style.css">
         <title>document sur le marche de la ram </title>
     </head>
     <body>
@@ -19,9 +20,9 @@
                     <li><a href="conclusion.html">Resultat et Conclusion</a></li>
                 </ul>
             </nav>
-            <h1>Acceuil du site et Introduction</h1>
         </header>
         <main>
+            <h1>Acceuil du site et Introduction</h1>
             <section>
                 <h2>Introduction et Problématique</h2>
                 <p>
