une partie du css est finie

--- a/cause.html
+++ b/cause.html
@@ -14,15 +14,15 @@
             <img src="img/logo-cergy.jpg " width="200" height="200"/>
             <nav>
                 <ul>
-                    <li><a href="index.html">Accueil</a></li> 
-                    <li><a href="cause.html">Cause</a></li>
-                    <li><a href="developpement.html">Remarques et définitions</a> </li>
-                    <li><a href="conclusion.html">Resultat et Conclusion</a></li>
+                    <li class="titre"><a href="index.html">Accueil</a></li> 
+                    <li class="titre"><a href="cause.html">Cause</a></li>
+                    <li class="titre"><a href="developpement.html">Remarques et définitions</a> </li>
+                    <li class="titre"><a href="conclusion.html">Resultat et Conclusion</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <h1>Les causes de la flambée des prix</h1>
+            <h1 class="titre">Les causes de la flambée des prix</h1>
             <section>
                 <p>
                     Contrairement à ce que l'on pourrait croire, la hausse des prix n'est pas due au 
@@ -35,7 +35,7 @@
                 </p>
             </section>
             <section>
-                <h2>Pourquoi l'IA a besoin de cette mémoire spéciale (HBM) ?</h2>
+                <h2 class="titre">Pourquoi l'IA a besoin de cette mémoire spéciale (HBM) ?</h2>
                 <p>
                     La RAM classique (DDR5) est beaucoup trop lente. La solution est la HBM. Contrairement 
                     à une barrette "plate", la HBM empile les puces de mémoire à la verticale (3D Stacking). 
@@ -44,7 +44,7 @@
                 </p>
             </section>
             <section id="raison-choix">
-                <h2>Pourquoi les fabricants ont-ils fait ce choix ?</h2>
+                <h2 class="titre">Pourquoi les fabricants ont-ils fait ce choix ?</h2>
                 <p>
                     La fabrication de la mémoire HBM monopolise une grande partie des capacités de production. 
                     Les usines ayant une surface et des ressources limitées, les fabricants ne peuvent pas augmenter 
