--- a/conclusion.html
+++ b/conclusion.html
@@ -14,15 +14,15 @@
             <img src="img/logo-cergy.jpg " width="200" height="200"/>
             <nav>
                 <ul>
-                    <li><a href="index.html">Accueil</a></li> 
-                    <li><a href="cause.html">Cause</a></li>
-                    <li><a href="developpement.html">Remarques et définitions</a> </li>
-                    <li><a href="conclusion.html">Resultat et Conclusion</a></li>
+                    <li class="titre"><a href="index.html">Accueil</a></li> 
+                    <li class="titre"><a href="cause.html">Cause</a></li>
+                    <li class="titre"><a href="developpement.html">Remarques et définitions</a> </li>
+                    <li class="titre"><a href="conclusion.html">Resultat et Conclusion</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <h1>Bilan et Perspectives</h1>
+            <h1 class="titre">Bilan et Perspectives</h1>
             <section>
                 <h2>Le Résultat : Un marché sacrifié</h2>
                 <p>
