j'ai une version 2.0 mais y a des truc a revoir

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
             <img src="img/logo-cergy.jpg " width="200" height="200"/>
             <nav>
                 <ul>
-                    <li><a href="index.html">Accueil</a></li> 
-                    <li><a href="cause.html">Cause</a></li>
-                    <li><a href="developpement.html">Remarques et définitions</a> </li>
-                    <li><a href="conclusion.html">Resultat et Conclusion</a></li>
+                    <li  class="titre"><a href="index.html">Accueil</a></li> 
+                    <li class="titre"><a href="cause.html">Cause</a></li>
+                    <li class="titre"><a href="developpement.html">Remarques et définitions</a> </li>
+                    <li class="titre"><a href="conclusion.html">Resultat et Conclusion</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <h1>Acceuil du site et Introduction</h1>
+            <h1 class="titre">Acceuil du site et Introduction</h1>
             <section>
-                <h2>Introduction et Problématique</h2>
+                <h2 class="titre">Introduction et Problématique</h2>
                 <p>
                     Si vous avez prévu de monter un PC ou d'acheter un nouveau téléphone récemment, 
                     vous avez sûrement remarqué une flambée des tarifs. <strong>Depuis quelque temps, 
@@ -34,14 +34,14 @@
                     sans elle rien ne marche et donc cette hausse impacte directement le prix des appareils .
                     et donc votre budget.
                 </p>
-                <figure>
+                <figure class="illustration">
                     <img src="img/ram-price.jpg" alt="l'evolution du prix de la ram" width="1024" height="576"/>
                     <figcaption>l'evolution du prix de la ram ,source :linkedin</figcaption>
                 </figure>
             </section>
             <section>
-                <h2>Organisation des pages</h2>
-                <figure>
+                <h2 class="titre">Organisation des pages</h2>
+                <figure class="illustration">
                     <img src="img/shema-site.png" alt="">
                     <figcaption>shema de ce site</figcaption>
                 </figure>
