--- a/conclusion.html
+++ b/conclusion.html
@@ -40,7 +40,7 @@
                 </figure>
             </section>
             <section>
-                <h2>Peut-on espérer une baisse en 2027 ?</h2>
+                <h2 class="titre">Peut-on espérer une baisse en 2027 ?</h2>
                 <p>
                     Les experts disent qu'il faudra attendre au moins 2027 pour voir les prix baisser, le temps 
                     que de nouvelles usines soient construites.
@@ -61,7 +61,7 @@
                 <figure>
                     <img src="img/calendrier.png" alt="Calendrier avec point d'interrogation" >
                 </figure>
-                <h3>Merci de votre lecture !</h3>
+                <h3 class="titre">Merci de votre lecture !</h3>
             </section>
         </main>
         <footer>
