--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </nav>
         </header>
         <main>
-            <h1>Acceuil du site et Introduction</h1>
+            <h1 class="titre">Acceuil du site et Introduction</h1>
             <section>
-                <h2>Introduction et Problématique</h2>
+                <h2 class="titre">Introduction et Problématique</h2>
                 <p>
                     Si vous avez prévu de monter un PC ou d'acheter un nouveau téléphone récemment, 
                     vous avez sûrement remarqué une flambée des tarifs. <strong>Depuis quelque temps, 
@@ -40,7 +40,7 @@
                 </figure>
             </section>
             <section>
-                <h2>Organisation des pages</h2>
+                <h2 class="titre">Organisation des pages</h2>
                 <figure>
                     <img src="img/shema-site.png" alt="">
                     <figcaption>shema de ce site</figcaption>
