on m'a dit les asiatique sont fort en code je viens de recontrer le

--- a/cause.html
+++ b/cause.html
@@ -6,7 +6,8 @@
         <meta name="Auteur" content="Feraoun Mohamed et ANURAJAN Thenuxshan" />
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
         <meta name="Sujet" content="l'evolution du marche de la ram">
-        <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/jpg" />
+        <link rel="shortcut icon" href="img/iconRAM.png" type="image/jpg" />
+        <link rel="stylesheet" href="style.css">
         <title>La raison de la hausse des prix </title>
     </head>
     <body>
