--- a/conclusion.html
+++ b/conclusion.html
@@ -6,7 +6,8 @@
         <meta name="Auteur" content="Feraoun Mohamed et ANURAJAN Thenuxshan" />
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
         <meta name="Sujet" content="l'evolution du marche de la ram">
-        <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/jpg" />
+        <link rel="shortcut icon" href="img/iconRAM.png" type="image/jpg" />
+        <link rel="stylesheet" href="style.css">
         <title>Resultat de la penurie sur le marche et la conclusion </title>
     </head>
     <body>
@@ -24,7 +25,7 @@
         <main>
             <h1 class="titre">Bilan et Perspectives</h1>
             <section>
-                <h2>Le Résultat : Un marché sacrifié</h2>
+                <h2 class="titre">Le Résultat : Un marché sacrifié</h2>
                 <p>
                     Aujourd'hui, nous payons le prix fort pour une technologie (la DDR5) qui, normalement
                     , aurait dû devenir moins chère cette année. <a href="page1.html#raison-choix">C'est un choix délibéré des 
@@ -45,7 +46,7 @@
                     Les experts disent qu'il faudra attendre au moins 2027 pour voir les prix baisser, le temps 
                     que de nouvelles usines soient construites.
                 </p>
-                <ul>
+                <ul id="liste">
                     <li>Si l'IA continue de grandir aussi vite, ces nouvelles usines serviront à 
                         fabriquer de la mémoire pour l'IA, et non pour nos PC.</li>
                     <li>Tant que l'IA rapportera plus d'argent aux fabricants, nous 
