--- a/developpement.html
+++ b/developpement.html
@@ -6,12 +6,13 @@
         <meta name="Auteur" content="Feraoun Mohamed et ANURAJAN Thenuxshan" />
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
         <meta name="Sujet" content="l'evolution du marche de la ram">
-        <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/x-icon" />
+        <link rel="shortcut icon" href="img/iconRAM.png" type="image/x-icon" />
+        <link rel="stylesheet" href="style.css">
         <title>Définitions et Remarques</title>
     </head>
     <body>
         <header>
-            <img src="img/logo-cergy.jpg " width="200" height="200"/>
+            <img src="img/logo-cergy.jpg " />
                 <nav>
                     <ul>
                         <li class="titre"><a href="index.html">Accueil</a></li> 
@@ -26,7 +27,7 @@
             <h1 class="titre">Remarques et définitions</h1>
                 <section>
                     <figure>
-                        <img src="img/point-d-interrogation-6906191.webp" alt="illustration d'interrogation" width="200">
+                        <img src="img/point-d-interrogation-6906191.webp" alt="illustration d'interrogation" id="homme-intero">
                     </figure>
                     <h2 class="titre">Le saviez vous ?</h2>
 
@@ -41,7 +42,7 @@
                         leur bon rapport qualité-prix.
                         
                         <h4>L'entrprise <a href = "#id-Minisforum">Minisforum</a></h4>
-                        <figure><img src="img/minisforum.jpeg" alt="logo de l'entrprise minisforum" width="75"></figure>
+                        <figure><img src="img/minisforum.jpeg" alt="logo de l'entrprise minisforum" width="75" id="logo-entreprise"></figure>
                     </p>
                     
                     <h3 class="titre">Le marché de la ram</h3>
