--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="Auteur" content="Feraoun Mohamed et ANURAJAN Thenuxshan" />
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
         <meta name="Sujet" content="l'evolution du marche de la ram">
-        <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/jpg" />
+        <link rel="shortcut icon" href="img/iconRAM.png" type="image/jpg"  />
         <link rel="stylesheet" href="style.css">
         <title>document sur le marche de la ram </title>
     </head>
@@ -23,7 +23,7 @@
             </nav>
         </header>
         <main>
-            <h1 class="titre">Acceuil du site et Introduction</h1>
+            <h1 class="titre">Accueil du site et Introduction</h1>
             <section>
                 <h2 class="titre">Introduction et Problématique</h2>
                 <p>
@@ -34,15 +34,15 @@
                     sans elle rien ne marche et donc cette hausse impacte directement le prix des appareils .
                     et donc votre budget.
                 </p>
-                <figure class="illustration">
+                <figure>
                     <img src="img/ram-price.jpg" alt="l'evolution du prix de la ram" width="1024" height="576"/>
                     <figcaption>l'evolution du prix de la ram ,source :linkedin</figcaption>
                 </figure>
             </section>
             <section>
                 <h2 class="titre">Organisation des pages</h2>
-                <figure class="illustration">
-                    <img src="img/shema-site.png" alt="">
+                <figure id="shema">
+                    <img  src="img/shema-site.png" alt="" >
                     <figcaption>shema de ce site</figcaption>
                 </figure>
                 <p>Ce schéma montre l'organisation du site. J'ai intégré un menu de navigation sur chaque page, 
