j'ai fini les boutons et le footeur

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
         <meta name="Auteur" content="Feraoun Mohamed et ANURAJAN Thenuxshan" />
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
         <meta name="Sujet" content="l'evolution du marche de la ram">
-        <link rel="shortcut icon" href="img/logo-cergy.jpg" type="image/jpg" />
+        <link rel="shortcut icon" href="img/logo-cergy.png" type="image/png" />
         <link rel="stylesheet" href="style.css">
         <title>document sur le marche de la ram </title>
     </head>
     <body>
         <header>
-            <img src="img/logo-cergy.jpg " width="200" height="200"/>
+            <img src="img/logo-cergy.png" width="200" height="200"/>
             <nav>
                 <ul>
                     <li  class="titre"><a href="index.html">Accueil</a></li> 
