--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
         <meta name="Auteur" content="Feraoun Mohamed et ANURAJAN Thenuxshan" />
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
         <meta name="Sujet" content="l'evolution du marche de la ram">
-<<<<<<< HEAD
-        <link rel="shortcut icon" href="img/iconRAM.png" type="image/jpg"  />
-=======
         <link rel="shortcut icon" href="img/logo-cergy.png" type="image/png" />
->>>>>>> 65affcf3bcdf7018e7876f9a82e85e95317c8424
         <link rel="stylesheet" href="style.css">
         <title>document sur le marche de la ram </title>
     </head>
@@ -38,9 +34,8 @@
                     sans elle rien ne marche et donc cette hausse impacte directement le prix des appareils .
                     et donc votre budget.
                 </p>
-                <figure>
-                    <img src="img/ram-price.jpg" alt="l'evolution du prix de la ram" width="1024" height="576"/>
-                    <figcaption>l'evolution du prix de la ram ,source :linkedin</figcaption>
+                <figure id="image-accueil">
+                    <img src="img/image d'acceuil.png" alt="image de RAM" />
                 </figure>
             </section>
             <section>
