--- a/developpement.html
+++ b/developpement.html
@@ -53,7 +53,7 @@
                     <h3 class="titre">Le marché de la ram</h3>
                         
                         <figure>
-                            <img src="img/Graphique DDR5.png" alt="graphique de l'evolution de la ram" width="1000">
+                            <img src="img/Graphique-DDR5.png" alt="graphique de l'evolution de la ram" width="1000">
                             <figcaption><em>Titre : graphique montrant l'evolution de la RAM</em></figcaption>
                         </figure>
 
