--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     et donc votre budget.
                 </p>
                 <figure id="image-accueil">
-                    <img src="img/image d'acceuil.png" alt="image de RAM" />
+                    <img src="img/image-d'acceuil.png" alt="image de RAM" />
                 </figure>
             </section>
             <section>
