--- a/developpement.html
+++ b/developpement.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-            <img src="img/logo-cergy.jpg"/>
+            <img alt="logo de cergy" src="img/logo-cergy.jpg"/>
                 <nav>
                     <ul>
                         <li class="titre"><a href="index.html">Accueil</a></li> 
