--- a/developpement.html
+++ b/developpement.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr"  xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="pourquoi le prix de la RAM explose en 2026, causes et conséquences sur le marché hardware.">
+        <meta name="description" content="pourquoi le prix de la RAM explose en 2026, causes et conséquences sur le marché hardware." />
         <meta name="Auteur" content="Feraoun Mohamed et ANURAJAN Thenuxshan" />
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
-        <meta name="Sujet" content="l'evolution du marche de la ram">
-        <link rel="shortcut icon" href="img/iconRAM.png" type="image/x-icon" />
-        <link rel="stylesheet" href="style.css">
+        <meta name="Sujet" content="l'evolution du marche de la ram" />
+        <link rel="shortcut icon" href="img/iconRAM.png" type="image/jpg"  />
+        <link rel="stylesheet" href="style.css" />
         <title>Définitions et Remarques</title>
     </head>
     <body>
