--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr"  xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="pourquoi le prix de la RAM explose en 2026, causes et conséquences sur le marché hardware.">
+        <meta name="description" content="pourquoi le prix de la RAM explose en 2026, causes et conséquences sur le marché hardware." />
         <meta name="Auteur" content="Feraoun Mohamed et ANURAJAN Thenuxshan" />
         <meta name="Formation" content="L2 Informatique - CY Cergy Paris Université"/>
-        <meta name="Sujet" content="l'evolution du marche de la ram">
+        <meta name="Sujet" content="l'evolution du marche de la ram" />
         <link rel="shortcut icon" href="img/iconRAM.png" type="image/jpg"  />
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css" />
         <title>document sur le marche de la ram </title>
     </head>
     <body>
@@ -41,7 +41,7 @@
             <section>
                 <h2 class="titre">Organisation des pages</h2>
                 <figure id="shema">
-                    <img  src="img/shema-site.png" alt="" >
+                    <img  src="img/shema-site.png" alt="" />
                     <figcaption>shema de ce site</figcaption>
                 </figure>
                 <p>Ce schéma montre l'organisation du site. J'ai intégré un menu de navigation sur chaque page, 
